@@ -1,3 +1,9 @@
+2001-07-17  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
+
+	* glib/gmain.c: Add some assertions. Simplify and fix
+	g_main_context_release(). Fix some locking bugs in
+	g_main_loop_run().
+
 2001-07-12  Mark Murnane  <Mark.Murnane@sun.com>
 
 	* glib/gmessages.c: Changed prototype of printf_string_upper_bound
